--- a/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
+++ b/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BlazorApp.Shared\BlazorApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
